CHANGES IN VERSION 1.5.8
------------------------
 o Fixed bug with matrix of markers in fcol. Now if one of the 
   columns in the feature data is a matrix, it is converted to
   a vector using mrkMatToVec. This helps clarity and reduces 
   wasted table space of 1's and 0's. <2016-07-29 Fri>  

CHANGES IN VERSION 1.5.7
------------------------
 o Fixed bug in pRolocVis in converting GO ids <2016-05-26 Thu>

CHANGES IN VERSION 1.5.6
------------------------
 o Removing plotMat2D app (closes issue #69) <2016-03-11 Fri>
 o add package startup msg <2016-03-11 Fri>
 o instruct users to install latest version from github
 
CHANGES IN VERSION 1.5.5
------------------------
 o Depend on DT >= 0.1.40
 
CHANGES IN VERSION 1.5.4
------------------------
 o replace getLisacol by getStockcol (which are now Lisa's colours;
   since pRoloc version 1.11.9) <2016-02-16 Tue>
 
CHANGES IN VERSION 1.5.3
------------------------
 o update refs in vignette <2016-02-09 Tue>
 
CHANGES IN VERSION 1.5.2
------------------------
 o Updated pca app <2016-01-11 Mon>
 o Updated vignette <2016-01-12 Tue>
 o Fixed bugs, pca app renamed main app, removed
   profiles app <2016-01-14 Thu>
 o new compare app <2016-01-30 Sat> 
 o updated vignette <2016-02-03 Wed> 

CHANGES IN VERSION 1.5.1
------------------------
 o New shiny apps <2015-10-12 Mon>
 o New vignette <2015-10-29 Thu>
 o Fixed bugs and updated examples in classify app 
   <2015-11-09 Mon> 
 
CHANGES IN VERSION 1.5.0
------------------------
 o Bioc devel 3.3
 
CHANGES IN VERSION 1.4.0
------------------------
 o Bioc release 3.2
 
CHANGES IN VERSION 1.3.2
------------------------
 o Fix check warnings and errors <2015-07-20 Mon>
 
CHANGES IN VERSION 1.3.1
------------------------
 o new plotMat2D function <2015-05-20 Wed>
 o Fix query search in pRolocVis, contributed by pierremj
   <2015-05-27 Wed>
 o pRolocVis has new method arg <2015-05-29 Fri>
 
CHANGES IN VERSION 1.3.0
------------------------
 o Devel for Bioc 3.2
 