@@ -4,6 +4,10 @@ CHANGES IN VERSION 1.5.8
    columns in the feature data is a matrix, it is converted to
    a vector using mrkMatToVec. This helps clarity and reduces 
    wasted table space of 1's and 0's. <2016-07-29 Fri>  
+ o Fixed bug in pRolocVis_compare application. Same issue as
+   above with passing matrix as a fcol which manifested as an
+   extra issue with zooming. Now fixed. <2016-07-29 Fri>
+
 
 CHANGES IN VERSION 1.5.7
 ------------------------
